--- a/zaffy_webapp/assets/style.css
+++ b/zaffy_webapp/assets/style.css
@@ -2619,8 +2619,8 @@ button.trigger span::before {
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../fonts/fontawesome/fonts/fontawesome-webfont.eot?v=4.2.0');
-  src: url('../fonts/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('../fonts/fontawesome/fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), url('../fonts/fontawesome/fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('../fonts/fontawesome/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');
+  /*src: url('../fonts/fontawesome/fonts/fontawesome-webfont.eot?v=4.2.0');*/
+  /*src: url('../fonts/fontawesome/fonts/fontawesome-webfont.eot?#iefix&v=4.2.0') format('embedded-opentype'), url('../fonts/fontawesome/fonts/fontawesome-webfont.woff?v=4.2.0') format('woff'), url('../fonts/fontawesome/fonts/fontawesome-webfont.ttf?v=4.2.0') format('truetype'), url('../fonts/fontawesome/fonts/fontawesome-webfont.svg?v=4.2.0#fontawesomeregular') format('svg');*/
   font-weight: normal;
   font-style: normal;
 }
@@ -9345,7 +9345,7 @@ img.mfp-img {
   display: none;
 }
 .ct-gallery:before {
-  content: url(../../assets/images/loader.svg);
+  /*content: url(../../assets/images/loader.svg);*/
   width: 44px;
   height: 44px;
   position: absolute;
